# carbon-platform-api

./: .dockerignore  .gitignore  AGENTS.md  BUILD_NOTES.md  BUILD_TICKETS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  example.env  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260517_0001_initial_schema.py  20260517_0002_usage_sample_estimates.py
docs/: api-walkthrough.md  architecture.md  deployment.md  runbook.md
docs/adr/: 0001-project-scope.md  0002-layered-architecture-and-mockable-boundaries.md  0003-async-postgresql-and-local-docker-stack.md  0004-demo-carbon-calculation-and-cache-first-intensity.md  0005-observability-and-quality-guardrails.md
observability/prometheus/: prometheus.yml
scripts/: build-loop.sh  check-layering.py  check-no-private-terms.py  quality-gate.sh
src/carbon_platform_api/: __init__.py  config.py  dependencies.py  logging.py  main.py  metrics.py
tests/: test_auth.py  test_automation_checks.py  test_carbon_calculations.py  test_carbon_intensity.py  test_ci_configuration.py  test_config.py  test_docker_configuration.py  test_documentation.py  test_health.py  test_models.py  test_observability_api.py  test_observability_stack_configuration.py  test_portfolio_readiness.py  test_readiness_service.py  test_reporting_repository.py  test_reporting_service.py  test_reports_api.py  test_request_id.py  test_usage_ingestion_service.py  test_usage_samples_api.py  test_usage_samples_repository.py  test_workspace_api.py  test_workspace_repository.py
(+42 files in other folders)
