[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "carbon-platform-api"
version = "0.1.0"
description = "Public portfolio FastAPI service for compute-related carbon usage tracking."
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
  { name = "carbon-platform-api contributors" },
]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "mypy>=1.13.0,<2.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=5.0.0,<8.0.0",
  "ruff>=0.8.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/carbon_platform_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-config", "--strict-markers"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP", "W"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
warn_unreachable = true
